infrastructure/gatekeeper/templates/block-root-containers.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockrootcontainers
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRootContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockrootcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not_run_as_non_root(container, input.review.object)
          msg := sprintf("Container %v is allowed to run as root. Enforce runAsNonRoot: true or a non-zero runAsUser.", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not_run_as_non_root(container, input.review.object)
          msg := sprintf("Init container %v is allowed to run as root. Enforce runAsNonRoot: true or a non-zero runAsUser.", [container.name])
        }

        not_run_as_non_root(container, pod) {
          container.securityContext.runAsUser == 0
        }

        not_run_as_non_root(container, pod) {
          container.securityContext.runAsNonRoot == false
        }

        not_run_as_non_root(container, pod) {
          not pod.spec.securityContext.runAsNonRoot == true
          not container.securityContext.runAsNonRoot == true
          not container.securityContext.runAsUser > 0
          not pod.spec.securityContext.runAsUser > 0
        }
